fix - width issue(extra scrollbar)

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -18,7 +18,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: calc(100vh - 100px);
 }
 
